applications/photoprism/manifest.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
spec:
  selector:
    matchLabels:
      app: photoprism
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
      - name: photoprism
        image: photoprism/photoprism:latest
        ports:
        - containerPort: 2342
          name: http
        volumeMounts:
        - mountPath: /assets/photos
          name: photos
        - mountPath: /assets/cache
          name: cache
        readinessProbe:
          httpGet:
            path: /api/v1/status
            port: http
      volumes:
      - name: photos
        persistentVolumeClaim:
          claimName: photos
      - name: cache
        persistentVolumeClaim:
          claimName: cache
---
apiVersion: v1
kind: Service
metadata:
  name: photoprism
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: photoprism
  type: ClusterIP
