applications/photoprism/ingress.yaml
apiVersion: extensions/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # Default is very low so most photo uploads will fail
    nginx.ingress.kubernetes.io/proxy-body-size: "512M"
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
  name: photoprism
spec:
  rules:
  - host: photos.jlh.name
    http:
      paths:
      - backend:
          serviceName: photoprism
          servicePort: http
        path: /
  tls:
  - hosts:
    - photos.jlh.name
    secretName: photoprism-cert
